# VisualSLam

./: README.md
Class1/Task/4/: CMakeLists.txt
Class2/Task/2/: CMakeLists.txt  Task1.cpp
Class2/Task/3/: CMakeLists.txt  robot.cpp
Class2/ch3/useEigen/: eigenMatrix.cpp
Class3/Task/6/: CMakeLists.txt  draw_trajectory.cpp
Class3/Task/7/: CMakeLists.txt  trajectoryError.cpp
Class3/ch4/: useSophus.cpp
Class3/ch4/example/: trajectoryError.cpp
Class4/Task/2/: CMakeLists.txt  undistort_image.cpp
Class4/Task/3/: CMakeLists.txt  disparity.cpp
Class4/Task/5/: CMakeLists.txt  gaussnewton.cpp
Class4/ch5/: CMakeLists.txt
Class4/ch5/imageBasics/: imageBasics.cpp  undistortImage.cpp
Class4/ch5/rgbd/: joinMap.cpp
Class4/ch5/stereo/: stereoVision.cpp
Class4/ch6/: CMakeLists.txt
Class5/Task/3/: CMakeLists.txt  E2Rt.cpp
Class5/Task/4/: CMakeLists.txt  GN-BA.cpp
Class5/Task/5/: CMakeLists.txt  ICP.cpp
Class5/ch7/: orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
Class6/Task/2/: CMakeLists.txt
Class6/Task/3/: CMakeLists.txt  direct_method.cpp
Class6/ch8/: direct_method.cpp  optical_flow.cpp
Class7/Task/3/: CMakeLists.txt  directBA.cpp
